<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RegistoDadosFragment"
    android:background="@android:color/white"
    android:id="@+id/fragment_registo_conta_layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="27sp"
                android:text="@string/text_qual_o_seu_n_mero_de_telefone"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingBottom="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/text_o_seu_n_mero_ser_utilizado_para_iniciar_a_sess_o_e_permitir_o_recarregamento_do_seu_saldo_no_mpesa"
                android:textColor="@android:color/black"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                android:layout_marginTop="10dp"
                >
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="number"
                    android:maxLength="9"
                    android:hint="@string/text_n_mero_de_telefone"
                    android:id="@+id/edit_text_registo_conta_numero"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                android:layout_gravity="center"
                >
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="textPassword"
                    android:hint="@string/text_palavra_passe"
                    android:id="@+id/edit_text_registo_conta_password"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_registo_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_chevron_right_white_24dp"
        tools:ignore="VectorDrawableCompat"
        android:elevation="5dp"
        android:clickable="true"
        />

</FrameLayout>