<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RegistoDadosFragment"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="27sp"
                android:text="@string/text_quem_voc"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingBottom="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/text_os_motoristas_confirmar_o_sua_presen_a_quando_eles_forem_acionados"
                android:textColor="@android:color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true"
                    android:layout_marginTop="10dp"
                    android:paddingRight="15dp"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="textPersonName"
                        android:hint="@string/text_nome"
                        android:id="@+id/edit_text_registo_dados_nome"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true"
                    android:layout_marginTop="10dp"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="textPersonName"
                        android:hint="@string/text_apelido"
                        android:id="@+id/edit_text_registo_dados_apelido"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:id="@+id/spinner_registo_dados_genero">
                </Spinner>

            </LinearLayout>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:id="@+id/date_picker_registo_dados_data_nascimento">
            </DatePicker>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_registo_dados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_chevron_right_white_24dp"
        tools:ignore="VectorDrawableCompat"
        android:elevation="5dp"
        android:clickable="true"
        />

</FrameLayout>